tests/quick-start-check-contents/quick-start-check-contents.exp

Stop any already-running server.

Quick start.

Expect no errors.
No errors!

Check contents with dependency, expect errors in contents.
Error -------------------------------------------------------------- test.js:3:2

Error: test.js:3
  3: (require('./dependency'): string);
      ^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `require(...)` to string because number [1] is incompatible with string [2].
  References:
    2: module.exports = ("hello": number);
                                  ^^^^^^ [1]: number. See: dependency.js:2
    3: (require('./dependency'): string);
                                 ^^^^^^ [2]: string


Found 1 error

Expect errors in dependency.
Error ------------------------------------------------------- dependency.js:2:19

Error: dependency.js:2
  2: module.exports = ("hello": number);
                       ^^^^^^^ Cannot cast `"hello"` to number because string [1] is incompatible with number [2].
  References:
    2: module.exports = ("hello": number);
                         ^^^^^^^ [1]: string
    2: module.exports = ("hello": number);
                                  ^^^^^^ [2]: number


Found 1 error

Unsaved files don't have dependents, as in non-lazy mode.
No errors!

Done!
